<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/bj" 
    >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/register_name"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="28dp"
        android:text="@string/nichen"
        android:textSize="28sp" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="180dip"
        android:layout_height="40dip"
        android:layout_alignLeft="@+id/register_name"
        android:layout_below="@+id/register_name"
        android:layout_marginTop="32dp"
        android:background="#ffffff"
        android:ems="10"
        android:hint="@string/setword"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/register_password"
        android:layout_alignLeft="@+id/textView1"
        android:text="@string/password"
        android:textSize="28sp" />

    <EditText
        android:id="@+id/register_name"
        android:layout_width="180dip"
        android:layout_height="40dip"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="40dp"
        android:layout_toRightOf="@+id/textView1"
        android:background="#ffffff"
        android:ems="10"
        android:hint="@string/zhanghuming"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/register_phone"
        android:layout_width="180dip"
        android:layout_height="40dip"
        android:layout_alignLeft="@+id/register_password"
        android:layout_below="@+id/register_password"
        android:layout_marginTop="31dp"
        android:background="#ffffff"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/register_phone"
        android:layout_toLeftOf="@+id/register_name"
        android:text="@string/phonen"
        android:textSize="28sp" />

    <EditText
        android:id="@+id/register_email"
        android:layout_width="180dip"
        android:layout_height="40dip"
        android:layout_alignLeft="@+id/register_phone"
        android:layout_below="@+id/register_phone"
        android:layout_marginTop="35dp"
        android:background="#ffffff"
        android:ems="10"
        android:hint="@string/mail" />

    <TextView
        android:id="@+id/TextView03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/register_email"
        android:layout_alignLeft="@+id/TextView02"
        android:text="@string/email"
        android:textSize="28sp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/register_email"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:text="@string/sig" />

    <TextView
        android:id="@+id/TextView04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/register_address"
        android:layout_toLeftOf="@+id/register_name"
        android:text="@string/address"
        android:textSize="28sp" />

    <EditText
        android:id="@+id/register_address"
        android:layout_width="180dip"
        android:layout_height="40dip"
        android:layout_above="@+id/button1"
        android:layout_alignLeft="@+id/button1"
        android:layout_marginBottom="27dp"
        android:background="#ffffff"
        android:ems="10"
        android:hint="@string/setaddress"
        android:inputType="textPersonName" />

</RelativeLayout >
