<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bj"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/showpict"
        android:layout_width="match_parent"
        android:layout_height="345dp"
        android:layout_weight="0.82"
        android:contentDescription="@string/app_name"
        android:src="@drawable/showpic" />

    <TextView
        android:id="@+id/detailed_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.15"
        android:ems="10"
        android:hint="@string/ID" />
    <TextView
        android:id="@+id/time_d"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.15"
        android:ems="10"
        android:hint="@string/time" />
    <TextView
        android:id="@+id/address_d"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.15"
        android:ems="10"
        android:hint="@string/address" />

    <TextView
        android:id="@+id/detailed_show"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.17"
        android:ems="10"
        android:hint="@string/detailed" >

        <requestFocus />
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.07"
            android:background="#00000000"
            android:contentDescription="@string/app_name"
            android:src="@drawable/heart" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.09"
            android:background="#00000000"
            android:contentDescription="@string/app_name"
            android:src="@drawable/heart" />

        <Button
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.74"
            android:text="@string/check" />
    </LinearLayout>

</LinearLayout>