<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/id_me"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bj"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:text="@string/button"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/denglu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp"
        android:text="@string/withoutlogin" 
        />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="23dp"
        android:layout_toLeftOf="@+id/denglu"
        android:src="@drawable/logo"
        
         />

    <Button
        android:id="@+id/button2"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="45dp"
        android:text="@string/publish1" />

    <Button
        android:id="@+id/Button01"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button2"
        android:layout_below="@+id/button2"
        android:layout_marginTop="30dp"
        android:text="@string/follow" />

    <Button
        android:id="@+id/Button02"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Button01"
        android:layout_below="@+id/Button01"
        android:layout_marginTop="17dp"
        android:text="@string/donation1" />

    <Button
        android:id="@+id/Button03"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Button02"
        android:layout_below="@+id/Button02"
        android:layout_marginTop="20dp"
        android:text="@string/logout" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Button01"
        android:layout_alignLeft="@+id/button2"
        android:src="@drawable/icon3"
         />

    <ImageView
        android:id="@+id/ImageView01"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Button01"
        android:layout_alignTop="@+id/Button01"
        android:src="@drawable/icon3"
         />

    <ImageView
        android:id="@+id/ImageView02"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Button03"
        android:layout_alignLeft="@+id/Button02"
        android:src="@drawable/icon3"
         />

    <Button
        android:id="@+id/button1"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_alignBottom="@+id/imageView1"
        android:layout_toRightOf="@+id/denglu"
        android:text="@string/login" />
    
</RelativeLayout>
