<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
<<<<<<< HEAD
    android:background="@drawable/bj"
=======
>>>>>>> 1e0bdc461a22b6b38b9226a987b90cf5a7b32456
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/show"
        android:layout_width="319dp"
        android:layout_height="114dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/showpic" />

    <TextView
        android:id="@+id/id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/ID"
         />

    <TextView
        android:id="@+id/detailed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/detailed"
        >

        <requestFocus />
    </TextView>

</LinearLayout>
