<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/model_test"
        android:layout_width="0dip"
        android:layout_height="408dp"
        android:layout_gravity="center" >

    </TextView>

     <LinearLayout
         android:layout_width="316dp"
         android:layout_height="86dp"
         android:layout_column="0"
         android:layout_gravity="left|top"
         android:layout_row="4"
         android:background="@drawable/title_bg"
         android:orientation="horizontal" >

        <Button
            android:id="@+id/main"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/main" />

        <Button
            android:id="@+id/publish"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/publish" />

        <Button
            android:id="@+id/donation"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/donation" />

        <Button
            android:id="@+id/me"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.13"
            android:text="@string/me" />
    </LinearLayout>

</GridLayout>
