<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/id_publish"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android1="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bj"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.zz.MainActivity" >

    <EditText
        android:id="@+id/time"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="27dp"
        android:ems="10"
        android:hint="@string/input_tytle.."
        android:inputType="textPersonName" />

    <requestFocus
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text" >
    </EditText>

	<RadioGroup
	    android:id="@+id/myRadioGroup"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="55dp" >

	    <RadioButton
	        android:id="@+id/rb_need"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android1:layout_marginLeft="30dp"
	        android:text="@string/need" />

	    <RadioButton
	        android1:id="@+id/rb_donation"
	        android1:layout_width="wrap_content"
	        android1:layout_height="wrap_content"
	        android1:layout_marginLeft="150dp"
	        android1:layout_marginTop="-32dp"
	        android1:text="@string/donation2" />

	</RadioGroup>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button1"
        android:layout_alignBottom="@+id/button1"
        android:layout_alignRight="@+id/editText2"
        android:text="@string/dele" />

    <ImageButton
        android1:id="@+id/imageButton1"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android1:layout_centerVertical="true"
        android1:layout_toRightOf="@+id/editText4"
        android1:src="@android:drawable/ic_menu_camera" />

    <EditText
        android1:id="@+id/editText2"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android1:layout_alignLeft="@+id/time"
        android1:layout_below="@+id/myRadioGroup"
        android1:ems="10"
        android1:hint="@string/say_something"
        android1:inputType="textMultiLine" />

    <ImageButton
        android1:id="@+id/imageButton3"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android1:layout_above="@+id/tv_user"
        android1:layout_toLeftOf="@+id/button2"
        android1:src="@android:drawable/ic_input_add" />

    <Button
        android1:id="@+id/button1"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android1:layout_below="@+id/editText3"
        android1:layout_marginTop="26dp"
        android1:layout_toRightOf="@+id/editText4"
        android1:text="@string/check1" />

    <ImageView
        android1:id="@+id/takephoto"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android1:layout_above="@+id/imageButton1"
        android1:layout_alignRight="@+id/editText2"
        android1:layout_below="@+id/editText2"
        android1:layout_toRightOf="@+id/editText4"
        android1:src="@drawable/icon3" />

    <EditText
        android1:id="@+id/editText3"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android1:layout_below="@+id/tv_user"
        android1:layout_marginTop="16dp"
        android1:layout_toRightOf="@+id/editText4"
        android1:ems="10"
        android1:hint="@string/input_address"
        android1:inputType="textPostalAddress" />

    <TextView
        android1:id="@+id/tv_user"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android1:layout_alignRight="@+id/button1"
        android1:layout_below="@+id/imageButton1"
        android1:text="@string/address1"
        android1:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>