<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
<<<<<<< HEAD
    xmlns:example="http://schemas.android.com/apk/res/com.example.zz"
=======
    xmlns:example="http://schemas.android.com/apk/res/com.example.tab"
>>>>>>> 1e0bdc461a22b6b38b9226a987b90cf5a7b32456
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <android.support.v4.view.ViewPager
        android:id="@+id/id_viewpager"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </android.support.v4.view.ViewPager>
  
    <LinearLayout
        android:id="@+id/bottom_layout"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="@drawable/tabbg"
        android:orientation="horizontal" >

<<<<<<< HEAD
     <com.example.zz.ChangeColorIconWithTextView
=======
     <com.example.tab.ChangeColorIconWithTextView
>>>>>>> 1e0bdc461a22b6b38b9226a987b90cf5a7b32456
            android:id="@+id/id_indicator_one"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="5dp"
            example:icon="@drawable/home"
            example:text="@string/home"
            example:text_size="12sp" />

<<<<<<< HEAD
       <com.example.zz.ChangeColorIconWithTextView
=======
       <com.example.tab.ChangeColorIconWithTextView
>>>>>>> 1e0bdc461a22b6b38b9226a987b90cf5a7b32456
            android:id="@+id/id_indicator_two"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="5dp"
            example:icon="@drawable/publish"
            example:text="@string/publish"
            example:text_size="12sp" />

<<<<<<< HEAD
       <com.example.zz.ChangeColorIconWithTextView
=======
       <com.example.tab.ChangeColorIconWithTextView
>>>>>>> 1e0bdc461a22b6b38b9226a987b90cf5a7b32456
            android:id="@+id/id_indicator_three"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="5dp"
            example:icon="@drawable/donation"
            example:text="@string/donation"
            example:text_size="12sp" />

<<<<<<< HEAD
        <com.example.zz.ChangeColorIconWithTextView
=======
        <com.example.tab.ChangeColorIconWithTextView
>>>>>>> 1e0bdc461a22b6b38b9226a987b90cf5a7b32456
            android:id="@+id/id_indicator_four"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="5dp"
            example:icon="@drawable/me"
            example:text="@string/me"
            example:text_size="12sp" />
    </LinearLayout>
    
   

</LinearLayout>